force-app/main/default/Lwc with site/objects/Education__c/Education__c.object-meta.xml
<CustomObject>
    <label>Education</label>
    <nameField>
        <displayFormat>Edu-{0000}</displayFormat>
        <label>Education No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Educations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>