force-app/main/default/Lwc with site/objects/Education__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>