force-app/main/default/Lwc with site/objects/Education__c/fields/Institute_Name__c.field-meta.xml
<CustomField>
    <fullName>Institute_Name__c</fullName>
    <label>Institute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>