force-app/main/default/Lwc with site/objects/Education__c/fields/Year_of_Pass__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Pass__c</fullName>
    <label>Year of Pass</label>
    <length>4</length>
    <type>Text</type>
</CustomField>